--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,20 @@
   <title>Test Zatrymailava</title>
 </head>
 <body>
-  <h1>ALLO</h1>
+  <main>
+    <div class="container">
+      <div class="form-holder">
+        <form action="submit">
+          <div class="input-holder">
+            <input id="phoneNumber" type="phone" maxlength="20">
+            <label for="phone">Ваш номер...</label>
+          </div>
+          <div id="order" class="button-holder">
+            <input type="submit" value="заказать" />
+          </div>
+        </form>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
