dev changed label behavior

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
       <div class="form-holder">
         <form action="submit">
           <div class="input-holder">
-            <input id="phoneNumber" type="phone" maxlength="20">
-            <label for="phone">Ваш номер...</label>
+            <input id="phoneNumber" type="tel" maxlength="20">
+            <label id="labelEl" for="phone">Ваш номер...</label>
           </div>
           <div id="order" class="button-holder">
             <input type="submit" value="заказать" />
