--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test Zatrymailava</title>
+  <script src="https://kit.fontawesome.com/387233e2d1.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <main>
@@ -16,7 +17,7 @@
             <label id="labelEl" for="phone">Ваш номер...</label>
           </div>
           <div class="button-holder">
-            <input id="order" type="submit" value="заказать" />
+            <button id="order">Заказать</button>
           </div>
         </form>
       </div>
